Pulling in new RR notes

--- a/ConcentrationInequalities/index.html
+++ b/ConcentrationInequalities/index.html
@@ -41,7 +41,7 @@ Proof
 </button>
 <div id="markovInEq" class="collapse">
 <p>Let <span class="math inline">\(X : S \rightarrow R^+\)</span> be a non-negative random variable</p>
-<p>We can divide the set <span class="math inline">\(S = S_1 + S_2\)</span> where <span class="math inline">\(S_1 = \{ s | X(s) \geq a\}\)</span> and <span class="math inline">\(S_2 = \{ s | X(s) &lt; a\}\)</span></p>
+<p>We can divide the set <span class="math inline">\(S = S_1 \cup S_2\)</span> where <span class="math inline">\(S_1 = \{ s | X(s) \geq a\}\)</span> and <span class="math inline">\(S_2 = \{ s | X(s) &lt; a\}\)</span></p>
 <p><span class="math display">\[\begin{align*}
 \mathbb{E}[X] &amp;= \int_{s \in S} X(s)f(s)ds \\
 &amp;=\int_{s \in S_1} X(s)f(s)ds + \int_{s \in S_2} X(s)f(s)ds \\
