--- a/CheuShuffleRR/index.html
+++ b/CheuShuffleRR/index.html
@@ -37,7 +37,10 @@
 <div class="algorithm">
 <p><strong>Local Randomiser:</strong> Inputs: <span class="math inline">\(x_i \in \{ 0, 1\}\)</span>, <span class="math inline">\(\lambda \in \{ 1, \dots, n-1\}\)</span></p>
 <p>Let <span class="math inline">\(p=\frac{\lambda}{n}\)</span> Each user tosses a coin with probability of heads being <span class="math inline">\(p\)</span></p>
-<p>If heads: <span class="math inline">\(y_i = Bernoulli(1/2)\)</span></p>
+If heads: <span class="math inline">\(y_i = Bernoulli(1/2)\)</span>
+<div class="intuition">
+<p>In the variant of Randomised Response known as Forced Randomised Response: we always output 1. Say we always output 0 instead. The maths doesnt really change. But it will help us connect two different algorithms.</p>
+</div>
 <p>If tails: <span class="math inline">\(y_i = x_i\)</span></p>
 <p>return y_i</p>
 <p><strong>Analyser:</strong> Inputs: <span class="math inline">\(Y=\{ y_1, \dots, y_n \}\)</span>, <span class="math inline">\(\lambda\)</span> from local randomiser</p>
@@ -57,9 +60,24 @@ The above estimator is an unbiased estimator of <span class="math inline">\(\sum
 <p>Thus in expectation the output of the algorithm gives us the Expected value of sum of binary values.</p>
 </div>
 <h3 id="an-alternate-way-to-describe-the-above-algorithm">An alternate way to describe the above algorithm</h3>
-<p>An equivalent version of the local algorithm can be described by the following algorithm. <strong>Assume each person has been made anonymous, so we can use shuffle privacy and central privacy synonymously</strong></p>
+<p>An equivalent version of the local algorithm can be described by the following algorithm. <strong>Assume each person has been made anonymous, so we can use shuffle privacy and central privacy synonymously</strong> In this section we compare the Cheu algorithm to Sample and threshold by Graham. Throughout this paper, we derive the missing pieces for Sample and threshold analysis.</p>
 <div class="algorithm">
-<p><strong>Analyser</strong> Inputs: <span class="math inline">\(Y=\{ x_1, \dots, x_n \}\)</span>, <span class="math inline">\(\lambda\)</span> from local randomiser</p>
+<p><strong>Analyser</strong> Inputs: <span class="math inline">\(Y=\{ x_1, \dots, x_n \}\)</span>, Same <span class="math inline">\(\lambda\)</span> from local randomiser</p>
+<p>Let <span class="math inline">\(p=\frac{\lambda}{n}\)</span></p>
+<p><span class="math inline">\(s \leftarrow Binomial(n, p)\)</span></p>
+<p>Define <span class="math inline">\(\mathcal{H}_s = \{ H \subseteq \left\lfloor n \right\rfloor | |H| = s\}\)</span></p>
+<p>In words <span class="math inline">\(\mathcal{H}_s\)</span> is a set of sets. Each set inside <span class="math inline">\(\mathcal{H}_s\)</span> is a way to select <span class="math inline">\(s\)</span> elements from <span class="math inline">\(\left\lfloor n \right\rfloor\)</span>. There are <span class="math inline">\({n \choose s}\)</span> ways of doing this.</p>
+<p>Select <span class="math inline">\(H \sim Uniform(\mathcal{H}_S)\)</span></p>
+<div class="intuition">
+<p><span class="math inline">\(H\)</span> represents a set obtained by Poisson sampling with parameter <span class="math inline">\(p\)</span>, where Poisson sampling is described how Graham describes it in his Sample and Threshold paper.</p>
+</div>
+<p>Final output: <span class="math inline">\(\sum_{i \notin H}y_i + Bin(s, \frac{1}{2})\)</span></p>
+<div class="intuition">
+<p>In the sample and threshold regime the final output is.</p>
+<p>Final output: <span class="math inline">\(\sum_{i \notin H}y_i + \sum_{i \notin H} 0\)</span></p>
+<p>We get exactly forced randomised response <a href="https://en.wikipedia.org/wiki/Randomized_response">see first example of wikipedia page</a></p>
+<p><span class="math inline">\(\sum_{i \notin H}y_i + \sum_{i \notin H} 1\)</span></p>
+</div>
 </div>
 <h1 id="references">References</h1>
 <!-- [1]: https://arxiv.org/pdf/2109.13158.pdf "Differentially Private Aggregation in the Shuffle Model: Almost Central Accuracy in Almost a Single Message"
