Clean up and not local not shuffle

--- a/ConcentrationInequalities/index.html
+++ b/ConcentrationInequalities/index.html
@@ -176,7 +176,8 @@ Proof
 <h3 id="weaker-but-more-compact-form">Weaker but more compact form</h3>
 <p>TODO</p>
 <h2 id="hoeffdings-bound">Hoeffdings Bound</h2>
-<p>TODO</p>
+<p>If <span class="math inline">\(x_i, \dots, x_n\)</span> are i.i.d random variables bounded in <span class="math inline">\((a, b)\)</span> with mean <span class="math inline">\(\mu\)</span>, for every <span class="math inline">\(\delta &gt; 0\)</span> we have</p>
+<p><span class="math display">\[\mathbb{P}[|\sum_{i=1}^n x_i - \mu n | \geq (b-a)\sqrt{\frac{n}{2}\log(\frac{2}{\delta})} ] \leq \delta\]</span></p>
 <h2 id="monte-carlo-simulations">Monte Carlo Simulations</h2>
 <p>Python code to consolidate understanding – re-creating definitions in code and observing how often the theoretical guarantees are violated.</p>
 <embed type="text/html" src="code/sample.html" width="800" height="600">
