--- a/RRSurvey/index.html
+++ b/RRSurvey/index.html
@@ -37,6 +37,7 @@
 <ol type="1">
 <li><a href="https://imai.fas.harvard.edu/research/files/randresp.pdf">A survey of Randomised Response techniques</a></li>
 </ol>
+<p>https://arxiv.org/pdf/1612.05568.pdf “Optimal Differentially Private Mechanisms for Randomised Response” 2. <a href="https://arxiv.org/pdf/1612.05568.pdf">Optimal Differentially Private Mechanisms for Randomised Response</a></p>
 </div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
