--- a/ShufflePrivacy/index.html
+++ b/ShufflePrivacy/index.html
@@ -31,6 +31,7 @@
 
 <div class="container">
 <h1 id="separating-local-and-shuffle-privacy">Separating local and Shuffle Privacy</h1>
+<p><a href="./#notLocalNotShuffleLemma">Link</a></p>
 <div class="question">
 Is there a major difference between mean estimation for histograms and regular mean estimation of a discrete population? [<a href="https://arxiv.org/pdf/2109.13158.pdf" title="Differentially Private Aggregation in the Shuffle Model: Almost Central Accuracy in Almost a Single Message">5</a>] does the same problem as this paper but not for histograms. Therefore histograms as they are bucketted, must be easier?
 </div>
@@ -310,30 +311,29 @@ Proof
 <p>For the j’th index which is 1 there can be at the most 2 bits. One from the bernoulli and one from the input. All other indices can have at the most 1 bit from the bernoulli. So There are <span class="math inline">\(d\)</span> indices, thus d + 1 messages/bits/1’s maximum.</p>
 </div>
 <h2 id="pure-shuffle-privacy">Pure Shuffle Privacy</h2>
+<p><strong>TODO: EDIT THIS</strong></p>
 <p>It can be shown that if we restricted to pure differential privacy i.e. a deterministic concentration inequality Shuffle privacygives us the same guarantees as local privacy for single message communicatiom.</p>
 <p>The authors claim that any single-message shuffled protocol that satisfies <span class="math inline">\(\epsilon\)</span>-differential privacy can be simulated by a local protocol under the same privacy constraint.</p>
-<h3 id="single-message-shuffle-its-randomiser-is-central-dp.">Single Message Shuffle =&gt; It’s randomiser is central DP.</h3>
+<h3 id="notLocalNotShuffleLemma">If not local DP =&gt; Not Shuffle DP either</h3>
 <div class="lemma">
 <p>Let <span class="math inline">\(P = (R,A)\)</span> be any single-message shuffled protocol that satisfies <span class="math inline">\(\epsilon\)</span>-differential privacy. Then <span class="math inline">\(R\)</span> is an <span class="math inline">\(\epsilon\)</span>-differentially private algorithm.</p>
 </div>
-<p>There exists a multi-message shuffled protocol that is <span class="math inline">\(\epsilon\)</span>-differentially private for all ε ≥ 0 but its randomizer is not <span class="math inline">\(\epsilon\)</span>-differentially private for any finite ε.</p>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#shuffleRisDP">
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#notLocalNotShuffle">
 Proof
 </button>
-<div id="shuffleRisDP" class="collapse">
-<p>Proof the contrapositive. Assume <span class="math inline">\(R\)</span> is not <span class="math inline">\(\epsilon\)</span> DP. If we show <span class="math inline">\((S \circ R)(X)\)</span> is also not DP, then we are done.</p>
-<p>By our assumption, there exists <span class="math inline">\(x \sim x&#39;\)</span> and a <span class="math inline">\(Y \in \mathbb{Y}\)</span> such that</p>
-<p><span class="math display">\[ \mathbb{P}( R(x) \in Y) &gt; e^{\epsilon} \mathbb{P}( R(x&#39;) \in Y)\]</span></p>
-<p>Assume datasets X and X’ such that, <span class="math inline">\(X = (x, ..., x)\)</span> contains <span class="math inline">\(n\)</span> copies of <span class="math inline">\(x\)</span> and <span class="math inline">\(X&#39; = (x&#39;, x, ..., x)\)</span>, contains <span class="math inline">\(n-1\)</span> copies of <span class="math inline">\(x\)</span> and <span class="math inline">\(x&#39;\)</span>.</p>
+<div id="notLocalNotShuffle" class="collapse">
+<p>Proof the contrapositive.</p>
+<p><span class="math inline">\(R\)</span> is the randomiser and the local randomiser spits out <span class="math inline">\(R(x) \in T \subseteq [m,n]\)</span>. All the above is saying is that the randomisers output is in some bounded interval <span class="math inline">\(T\)</span>.</p>
+<p>Consider two datasets <span class="math inline">\(X\)</span> and <span class="math inline">\(X’\)</span> such that <span class="math inline">\(X\)</span> contains <span class="math inline">\(n\)</span> copies of element <span class="math inline">\(x\)</span>, and <span class="math inline">\(X’\)</span> contains <span class="math inline">\(n-1\)</span> copies of <span class="math inline">\(x\)</span> and 1 copy of <span class="math inline">\(x&#39;\)</span>. Without loss of generality say, the n’th element of both datasets is different.</p>
 <span class="math display">\[\begin{align*}
-\mathbb{P}[(S \circ R)(X) \in Y^n] &amp;= \mathbb{P}[(R)(X) \in Y^n] \label{eq7}\tag{7}\\
-&amp;= \mathbb{P}[(R)(X) \in Y]^n \label{eq8}\tag{8}\\
-&amp;&gt; e^{\epsilon} \mathbb{P}[ R(x&#39;) \in Y]\mathbb{P}[ R(x&#39;) \in Y]^{n-1} \label{eq9}\tag{9}\\
-&amp;= e^{\epsilon} \mathbb{P}[ (S \circ R)(X&#39;) \in Y^n]
+\mathbb{P}[(S \circ R)(X) \in T^n] &amp;= \prod_{i=1}^n\mathbb{P}[R(x_i) \in T_i] \tag{1}\label{7}\\
+&amp;= \mathbb{P}[R(x) \in T_n]\prod_{i=1}^{n-1}\mathbb{P}[R(x_i) \in T_i] \\
+&amp;&gt; e^{\epsilon}\mathbb{P}[R(x&#39;) \in T_n]\prod_{i=1}^{n-1}\mathbb{P}[R(x_i) \in T_i] \tag{2}\label{8} \\
+&amp;= e^{\epsilon}\mathbb{P}[(S \circ R)(X&#39;) \in T^n]
 \end{align*}\]</span>
-<p><span class="math inline">\(\ref{eq7}\)</span> : The shuffle is uniformly random, so no shuffle has equal probability as any other permutation.</p>
-<p><span class="math inline">\(\ref{eq8}\)</span> : Each local randomiser is independent of other inputs</p>
-<p><span class="math inline">\(\ref{eq9}\)</span> : By assumption</p>
+<p><span class="math inline">\(\ref{7}:\)</span> By independence of distributed mechanism.</p>
+<p><span class="math inline">\(\ref{8}:\)</span> We assumed no local privacy, <span class="math inline">\(\mathbb{P}( R(x) \in T) &gt; e^{\epsilon} \mathbb{P}( R(x&#39;) \in T)\)</span></p>
+<p>What we have shown is that when the local randomiser doesn’t satisfy privacy, then the anoymised distributed version of that local randomiser fails to satisfy central privacy all the time as well.</p>
 </div>
 <h3 id="single-message-shuffle-there-exists-equivalent-local">Single Message Shuffle =&gt; There exists equivalent local</h3>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#shuffleHasLocalCounterpart">
