Clean up and not local not shuffle

--- a/ShufflePrivacy/index.html
+++ b/ShufflePrivacy/index.html
@@ -318,7 +318,7 @@ Proof
 <p>Let <span class="math inline">\(P = (R,A)\)</span> be any single-message shuffled protocol that satisfies <span class="math inline">\(\epsilon\)</span>-differential privacy. Then <span class="math inline">\(R\)</span> is an <span class="math inline">\(\epsilon\)</span>-differentially private algorithm.</p>
 </div>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#notLocalNotShuffle">
-Proof
+Proof: not local =&gt; not shuffle
 </button>
 <div id="notLocalNotShuffle" class="collapse">
 <p>Proof the contrapositive.</p>
