--- a/PrivateVoting/index.html
+++ b/PrivateVoting/index.html
@@ -32,7 +32,8 @@
 <p>This material needs a fair bit of new background. The topics include:</p>
 <ul>
 <li><a href="ExponentialMechanism">Exponential Mechanism</a></li>
-<li><a href="">A review of non-private Rank Aggregation</a></li>
+<li><a href="https://plato.stanford.edu/entries/social-choice/">Introduction to Choice Theory</a></li>
+<li><a href="https://cs.colgate.edu/~mhay/assets/publications/hay2017differentially.pdf">Differentially Private Rank Aggregation</a></li>
 <li><a href="">A general understanding of Voting methods</a></li>
 </ul>
 <h2 id="references">References</h2>
