Secure Voting updated

--- a/PrivateVoting/index.html
+++ b/PrivateVoting/index.html
@@ -29,16 +29,26 @@
 <body>
 <div class="container">
 <h1 id="private-voting">Private Voting</h1>
-<p>This material needs a fair bit of new background. The topics include:</p>
+<h2 id="setup">Setup</h2>
+<p>Define an election system like in [<a href="https://eprint.iacr.org/2009/582.pdf" title="A Game-Based Definition of Coercion-Resistance and its Applications">1</a>]. This is just different voting systems – has nothing to do with privacy. Plurality, Condorcet methods etc.</p>
+<h2 id="privacy-models">Privacy models</h2>
 <ul>
-<li><a href="ExponentialMechanism">Exponential Mechanism</a></li>
-<li><a href="https://plato.stanford.edu/entries/social-choice/">Introduction to Choice Theory</a></li>
-<li><a href="https://cs.colgate.edu/~mhay/assets/publications/hay2017differentially.pdf">Differentially Private Rank Aggregation</a></li>
-<li><a href="">A general understanding of Voting methods</a></li>
+<li>Passive Security</li>
+<li>Malicious – zero knowledge proofs etc.</li>
 </ul>
+<h2 id="plurality-methods">Plurality methods</h2>
+<p>Plurality voting is a system in which the candidate(s) with the highest number of votes wins, with no requirement to get a majority of votes. In cases where there is a single position to be filled, it is known as first-past-the-post; this is the second most common electoral system for national legislatures, with 58 countries using it to elect their legislatures, the vast majority of which are current or former British or American colonies or territories. It is also the second most common system used for presidential elections, being used in 19 countries.</p>
+<!-- 
+This material needs a fair bit of new background. The topics include:
+
+* [Exponential Mechanism](ExponentialMechanism)
+* [Introduction to Choice Theory](https://plato.stanford.edu/entries/social-choice/)
+* [Differentially Private Rank Aggregation](https://cs.colgate.edu/~mhay/assets/publications/hay2017differentially.pdf)
+* [A general understanding of Voting methods]()
+ -->
 <h2 id="references">References</h2>
 <ol type="1">
-<li><a href="https://arxiv.org/pdf/1206.5265.pdf">Consensus ranking under the exponential model</a></li>
+<li><a href="https://eprint.iacr.org/2009/582.pdf">A Game-Based Definition of Coercion-Resistance and its Applications</a></li>
 </ol>
 <ol start="2" type="1">
 <li><a href="https://dl.acm.org/doi/pdf/10.5555/2791220.2791224">Rank Aggregation: Together We’re Strong</a></li>
