--- a/SNIPs/index.html
+++ b/SNIPs/index.html
@@ -181,6 +181,7 @@ When can a a malicious client still pass the identity test.
 <h3 id="many-valid-circuits">Many valid circuits</h3>
 <p>To ensure a vote is valid there <span class="math inline">\(M+3\)</span> total circuit evaluations. For efficiency we require that on success, each valid gate outputs 0 instead of 1. Then the final check requires all the circuits to be 0, thus to accept we need <span class="math inline">\(\Big(\sum_{i=1}^{M+3} \sigma(r_i)W_i\Big) == 0\)</span>, where <span class="math inline">\(W_i\)</span> is the output of <span class="math inline">\(valid_i\)</span> and <span class="math inline">\(r_i\)</span> is the random value picked for the polynomial identity test for circuit <span class="math inline">\(i\)</span>.</p>
 <h3 id="zero-knowledge-1">Zero Knowledge</h3>
+<p>TODO</p>
 <h1 id="references">References</h1>
 <ol type="1">
 <li><a href="https://dl.acm.org/doi/pdf/10.1145/3133956.3133982">Practical Methods for Secure Aggregation</a></li>
