--- a/SNIPs/index.html
+++ b/SNIPs/index.html
@@ -195,6 +195,9 @@ When can a a malicious client still pass the identity test.
 &amp;= \hat{f}(r)\hat{g}(r) \\
 &amp;= \hat{fg}(r)
 \end{align*}\]</span>
+<h2 id="worked-out-example-in-python3">Worked out Example in Python3</h2>
+<p>This is not production quality code. Just a worked out example with all the circuits to show that the experiment backs up the claims stated above.</p>
+<p><embed type="text/html" src="./SNIPS_Voting.html" width="800" height="600"></p>
 <h1 id="references">References</h1>
 <ol type="1">
 <li><a href="https://dl.acm.org/doi/pdf/10.1145/3133956.3133982">Practical Methods for Secure Aggregation</a></li>
