--- a/DifferentialPrivacyMain/index.html
+++ b/DifferentialPrivacyMain/index.html
@@ -50,10 +50,11 @@
 </ul>
 <h2 id="exponential-mechanism-and-friends">Exponential Mechanism and friends</h2>
 <ul>
-<li><p><a href="ExponentialMechanism/">Exponential Mechanism</a>: A theoretical technique developed for when the utility of outputs being considered are very sensitive to perturbation. Examples include auction prices or voting counts. A little bit of noise could alter the final outcome drastically. I describe the theoretical framework with a few simple non practical examples. <strong>TODO</strong></p></li>
-<li><a href="LearningMultiConcepts/">Simultaneous Private Learning of Multiple Concepts</a></li>
-<li><p><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></p></li>
+<li><a href="ExponentialMechanism/">Exponential Mechanism</a>: A theoretical technique developed for when the utility of outputs being considered are very sensitive to perturbation. Examples include auction prices or voting counts. A little bit of noise could alter the final outcome drastically. I describe the theoretical framework with a few simple non practical examples. <strong>TODO</strong></li>
 </ul>
+<!-- * [Simultaneous Private Learning of Multiple Concepts](LearningMultiConcepts/)
+* [Frequency Estimation with  local privacy: A survey](FrequencyEstimationSurvey/index.html)
+ -->
 <!-- * [Succint Histogram Problem -- local privacy](SuccintHist-Bassily/index.html) -->
 <h2 id="survey-styled-writeups">Survey styled writeups</h2>
 <ul>
