Cleaned up DP update

--- a/DifferentialPrivacyMain/PrivateMeanEstimation/index.html
+++ b/DifferentialPrivacyMain/PrivateMeanEstimation/index.html
@@ -232,7 +232,7 @@ Graham: This is an intersting niche.</code></pre>
 <pre><code>Thanks for the notes.  The calculations look correct, based on binonial distribution.  I expect there is some nice statistical tricks to manipulate the pmf further.  Do you think there is any chance for a closed form for the variance, or is it best to leave it to numerical evaluation?
 
 Reducing the communication in this way is essentially being able to suppress messages in the noise setting, i.e., having noise that leads us to output zero most of the time.  This may not be possible without effectively including sampling in the method, and incurring the corresponding error from sampling.</code></pre>
-<h2 id="references-and-links-exchanged">References and Links exchanged</h2>
+<h2 id="references">References</h2>
 <ol type="1">
 <li><a href="../DiscreteLaplace/paper.pdf">UNIVERSALLY UTILITY-MAXIMIZING PRIVACY MECHANISMS</a></li>
 </ol>
@@ -260,11 +260,12 @@ Reducing the communication in this way is essentially being able to suppress mes
 <ol start="9" type="1">
 <li><a href="https://arxiv.org/abs/2106.04247">Private Counting from Anonymous Messages: Near-Optimal Accuracy with Vanishing Communication Overhead</a></li>
 </ol>
-<h2 id="links">Links</h2>
-<p>Streaming paper including voting: https://arxiv.org/abs/1603.00213</p>
-<p>Local differential privacy for voting/ranking https://arxiv.org/pdf/1908.04920.pdf (there may be some follow up)</p>
-<p>Your notes on privacy: https://abiswas3.github.io/differentialprivacy/</p>
-<p>Bonus: Mean estimation with low communication: https://arxiv.org/abs/2010.02331 (privacy follows by applying randomized response to the bit that is sent)</p>
+<h2 id="other-links-shared-in-the-time-frame">Other Links shared in the time frame</h2>
+<ul>
+<li><a href="https://arxiv.org/abs/1603.00213">Streaming paper including voting</a></li>
+<li><a href="https://arxiv.org/pdf/1908.04920.pdf">Local differential privacy for voting/ranking</a>: This was not very useful. This was just Laplace Mechanism with very little insight into something new.</li>
+<li><a href="https://arxiv.org/abs/2010.02331">Bonus- Mean estimation with low communication:</a> privacy follows by applying randomized response to the bit that is sent</li>
+</ul>
 </div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
